SGilfPaint 

Links:
*Demo Playlist: https://www.youtube.com/playlist?list=PL7aAVBVTiRjvFVXQAOw8Ubmft6D5f_4cO
________________________________________________________________________________
Version 2.0.0 - 11/13/2020

New Features:
* Polygon now supports all numbers above 1
* UI improvements
* Release Notes directly accessible from UI


Fixed:
* Fixed choppy shape drawing
* Actions undone and redone are no longer shared between canvases
* Cleaned up code

Known Issues:
* None
________________________________________________________________________________
Version 1.5.0 - 10/7/2020

New Features:
* Autosave now provides prompt to confirm save
* Tooltips
* Internal logs of activity
* Copy Tool
* Paste Tool

Fixed:
* Autosave now saves to last opened file
* Autosave timer properly decrements
* Changes to first canvas no longer affect other canvases

Known Issues:
* Undone and redone changes are shared between canvases

Expected Next Sprint:
* Polygon working with any amount of desired sides
* UI improvements

Links:
*Demo:https://youtu.be/-Iw2DRMrH_E
________________________________________________________________________________
Version 1.4.0 - 9/25/2020

New Features:
* Unit Tests
* Autosave
* Toggleable autosave visibility
* Multiple drawing areas that can be swapped between
* Indication for tool selection
* Warning when saving in lossy file formats

Known Issues:
* Autosave does not properly save image
* Autosave timer does not decrease correctly
* Changes made to first canvas affect other canvases until swapping to another and back again
* Undone and redone changes are shared between canvases

Expected Next Sprint:
* Working autosave
* Tooltips
* Logs of activity

Links:
*Demo:https://youtu.be/7ZiAUQqyAhM
________________________________________________________________________________
Version 1.3.0 - 9/21/2020

New Features:
* More shapes
* Add text
* Eraser tool
* Indication for tool selection
* Draw shape preview
* Select and move pieces of image